--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +14,9 @@
     "pg": "^8.3.0",
     "request": "^2.88.2",
     "sequelize": "^6.3.4"
+  },
+  "engines": {
+    "node": "9",
+    "npm": "5"
   }
 }
